# turbodrive

./: .gitattributes  .gitignore  .travis.yml  build_mac.sh  build_mac_bundle.sh  build_mac_debug.sh  build_mac_release.sh  build_win.cmd  build_win_bundle.cmd  build_win_debug.cmd  build_win_installer.cmd  build_win_release.cmd  rebuild_mac_debug.sh  rebuild_mac_release.sh  rebuild_win_debug.cmd  rebuild_win_release.cmd
src/: CMakeLists.txt  lre.bat  lup.bat  translations.ts
src-old/aDrive/: CMakeLists.txt  main.cpp
src-old/aDrive/res/: res.rc
src/APIClient/: ApiTypes.cpp  ApiTypes.h  AuthenticationService.cpp  AuthenticationService.h  CMakeLists.txt  ContentService.cpp  DashboardService.cpp  DashboardService.h  FileDownloader.cpp  FileDownloader.h  FileUploader.cpp  FileUploader.h  FilesService.cpp  FilesService.h  NotificationService.cpp  NotificationService.h  ProfileService.cpp  ProfileService.h  RestDispatcher.cpp  RestDispatcher.h  chunkuploader.cpp  chunkuploader.h
src/AnimatedSystemTrayIcon/: AnimatedSystemTrayIcon.cpp  AnimatedSystemTrayIcon.h  CMakeLists.txt
src/AnimatedSystemTrayIcon/test/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/Application/: AppController.cpp  AppController.h  CMakeLists.txt  LoginController.cpp  LoginController.h  TrayIcon.cpp  TrayIcon.h  factoriesstorage.cpp  factoriesstorage.h  filesystem.cpp  filesystem.h  filesystemfactory.cpp  filesystemfactory.h  ifactory.h  ifilesystem.h  ifilesystemfactory.h  isingletonfactory.h  main.cpp  remoteconfig.cpp  remoteconfig.h  types.cpp  types.h
src/Application/res/: drive_ru.qm  license.txt  res.qrc  res.rc  tutorial_mac_step1.tiff  tutorial_mac_step2_0.tiff  tutorial_mac_step2_1.tiff  tutorial_mac_step2_2.tiff  tutorial_mac_step3.tiff  tutorial_mac_step4.tiff
src/Application/res/appicon/: app.icns
src/Application/res/folder_icons/: error.icns  ok.icns  sync.icns
src/COM/: CMakeLists.txt  OverlayIconHandlerError.cpp  OverlayIconHandlerError.h  OverlayIconHandlerOk.cpp  OverlayIconHandlerOk.h  OverlayIconHandlerSync.cpp  OverlayIconHandlerSync.h  main.cpp  overlayiconshandler.cpp  overlayiconshandler.h
src/COM/res/: COM.rgs  res.rc
src/Events/: CMakeLists.txt  Cache.cpp  Cache.h  EventHandlerBase.cpp  EventHandlerBase.h  EventHandlers.cpp  EventHandlers.h  FileEventDispatcher.cpp  FileEventDispatcher.h  LocalDispatcher.cpp  LocalDispatcher.h  LocalEventHandlers.cpp  LocalEventHandlers.h  LocalFileEvent.cpp  LocalFileEvent.h  LocalFileEventNotifier.cpp  LocalFileEventNotifier.h  RemoteEventHandlers.cpp  RemoteEventHandlers.h  Syncer.cpp  Syncer.h
src/LoginUI/: CMakeLists.txt  FirstSettingsWidget.cpp  FirstSettingsWidget.h  LoginController.h  LoginWidget.cpp  LoginWidget.h  passwordresetwidget.cpp  passwordresetwidget.h
src/LoginUI/res/: loginUI.qrc
src/Network/: CMakeLists.txt  ConnectionController.cpp  ConnectionController.h  GeneralRestDispatcher.cpp  GeneralRestDispatcher.h  RestDispatcher.cpp  RestDispatcher.h  RestNetworkAccessManager.cpp  RestNetworkAccessManager.h  RestResource.cpp  RestResource.h  RestService.cpp  RestService.h  RestTypedefs.h  SimpleDownloader.cpp  SimpleDownloader.h  remoteconfig.cpp  remoteconfig.h
src/OverlayIcons/: MTSDiskErrorOverlayIcon.cpp  MTSDiskErrorOverlayIcon.h  MTSDiskErrorOverlayIcon.rgs  MTSDiskOkOverlayIcon.cpp  MTSDiskOkOverlayIcon.h  MTSDiskOkOverlayIcon.rgs  MTSDiskSyncOverlayIcon.cpp  MTSDiskSyncOverlayIcon.h  MTSDiskSyncOverlayIcon.rgs  MyOverlayIcon.cpp  MyOverlayIcon.h  OverlayIcon.idl  OverlayIcon.rc  OverlayIcon.vcxproj  OverlayIcon.vcxproj.filters  OverlayIconPS.vcxproj  OverlayIconPS.vcxproj.filters  OverlayIcons.sln  UpgradeLog.XML  UpgradeLog.htm  func.cpp  func.h  resource.h  stdafx.h
src/Settings/: CMakeLists.txt  proxySettings.cpp  proxySettings.h  runtimesettings.cpp  runtimesettings.h  settings.cpp  settings.h
src/SettingsUI/: AboutWidget.cpp  AboutWidget.h  AccountWidget.cpp  AccountWidget.h  AdvancedWidget.cpp  AdvancedWidget.h  CMakeLists.txt  ConnectionWidget.cpp  ConnectionWidget.h  GeneralWidget.cpp  GeneralWidget.h  SelectiveSyncDialog.cpp  SelectiveSyncDialog.h  SettingsWidget.cpp  SettingsWidget.h  standaloneaboutwidget.cpp  standaloneaboutwidget.h
src/SettingsUI/res/: settingsUI.qrc
src/SingleApp/: CMakeLists.txt  localserver.cpp  localserver.h  main.cpp  singleapp.cpp  singleapp.h
src/Tutorial/: CMakeLists.txt  tutorialmacstep1.cpp  tutorialmacstep1.h  tutorialmacstep1.ui  tutorialmacstep2.cpp  tutorialmacstep2.h  tutorialmacstep2.ui  tutorialmacstep3.cpp  tutorialmacstep3.h  tutorialmacstep3.ui  tutorialmacstep4.cpp  tutorialmacstep4.h  tutorialmacstep4.ui  tutorialplayer.cpp  tutorialplayer.h  tutorialstepinterface.cpp  tutorialstepinterface.h  tutorialwinstep1.cpp  tutorialwinstep1.h  tutorialwinstep1.ui  tutorialwinstep2.cpp  tutorialwinstep2.h  tutorialwinstep2.ui  tutorialwinstep3.cpp  tutorialwinstep3.h  tutorialwinstep3.ui  tutorialwinstep4.cpp  tutorialwinstep4.h  tutorialwinstep4.ui
src/Tutorial/res/: tutorial.qrc
src/Util/: AppStrings.cpp  AppStrings.h  CMakeLists.txt  FileUtils.cpp  FileUtils.h  FileUtils.mm  StylesheetReader.h  watchdog.cpp  watchdog.h
src/UtilUI/: AuxWidgets.cpp  AuxWidgets.h  AuxWidgets.mm  CMakeLists.txt  ExtraLabels.cpp  ExtraLabels.h  PixmapAnimation.cpp  PixmapAnimation.h  SpinnerWidget.cpp  SpinnerWidget.h  StylesheetReader.h  extralabels.cpp  extralabels.h  pixmapanimation2.cpp  pixmapanimation2.h
src/a-drive/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/a-drive/res/: res.qrc
src/aDrive/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/aDrive/res/: res.qrc
src/animated_system_tray_icon/: CMakeLists.txt  animated_system_tray_icon.cpp  animated_system_tray_icon.h
src/animated_system_tray_icon/test/: CMakeLists.txt  mainwindow.cpp
src/connection_controller/: CMakeLists.txt  connection_controller.cpp
src/res/: license.txt  res.qrc
src/rtCSS/: CMakeLists.txt  RealtimeStyleSheetLoader.cpp  RealtimeStyleSheetLoader.h
src/single_app/: CMakeLists.txt  localserver.cpp  localserver.h  main.cpp  singleapp.cpp  singleapp.h
(+118 files in other folders)
