project(AssistentDrive)
cmake_minimum_required(VERSION 2.8.11)

INCLUDE_DIRECTORIES(".")
INCLUDE_DIRECTORIES("./3rdParty")

# Check if environment variable QTDIR is set.
# Examples:
# 1. Windows: QTDIR = C:\dev\qt511\5.1.1\msvc2012
# 2. MacOS X: QTDIR = ~/Qt5.1.1/5.1.1/clang_64
if (DEFINED ENV{QTDIR})
	set(CMAKE_PREFIX_PATH $ENV{QTDIR} ${CMAKE_PREFIX_PATH})
else ()
	message (FATAL_ERROR "ERROR: Environment variable QTDIR is not set.")
endif ()

# Compiler configuration
if(MSVC)
	if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
		string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
	else()
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
	endif()
else()
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
	if(WIN32)
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
	else()
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
	endif()
endif()

if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Debug)
endif()

add_definitions(-DVERSION="1.0.0.0")
add_definitions(-DLOCAL_SERVER_NAME="AssistentDriveSA")
add_definitions(-DQT_FORCE_ASSERTS)
add_definitions(-DQS_LOG_LINE_NUMBERS)

include_directories("3rdParty/QsLog")
include_directories("3rdParty/efsw/include/efsw")
include_directories("AnimatedSystemTrayIcon")
include_directories("SingleApp")
include_directories("Util")
include_directories("UtilUI")
include_directories("rtCSS")
include_directories("Settings")
include_directories("SettingsUI")
include_directories("LoginUI")
include_directories("Network")
include_directories("APIClient")
include_directories("Events")
include_directories("Application")
include_directories("Tutorial")

add_subdirectory("3rdParty")
add_subdirectory("AnimatedSystemTrayIcon")
add_subdirectory("SingleApp")
add_subdirectory("Util")
add_subdirectory("UtilUI")
add_subdirectory("rtCSS")
add_subdirectory("Settings")
add_subdirectory("SettingsUI")
add_subdirectory("LoginUI")
add_subdirectory("Network")
add_subdirectory("APIClient")
add_subdirectory("Events")
add_subdirectory("Application")
add_subdirectory("Tutorial")
